# etos-environment-provider

./: .coveragerc  .gitignore  CHANGELOG.rst  Dockerfile  Dockerfile.workers  README.rst  pylintrc  pyproject.toml  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini
.github/workflows/: build-push.yml  main.yml
docs/: Makefile  conf.py  index.rst
manifests/base/: kustomization.yaml
manifests/base/api/: deployment.yaml  service-account.yaml  service.yaml
manifests/base/worker/: deployment.yaml  service-account.yaml
src/: entry.sh  entry_debug.sh  worker.sh
src/environment_provider/: __init__.py  environment.py  environment_provider.py  exceptions.py  webserver.py
src/environment_provider/backend/: common.py  configure.py  environment.py  subsuite.py
src/environment_provider/execution_space/: __init__.py  checkin.py  checkout.py  exceptions.py  execution_space.py  execution_space_definition.json  execution_space_provider.py  instructions.py  list.py
src/environment_provider/external_execution_space/: __init__.py  provider.py
src/environment_provider/external_iut/: __init__.py  iut_definition.json  provider.py
src/environment_provider/external_log_area/: __init__.py  provider.py
src/environment_provider/iut/: __init__.py  checkin.py  checkout.py  exceptions.py  iut.py  iut_definition.json  iut_provider.py  list.py  prepare.py
src/environment_provider/lib/: __init__.py  celery.py  config.py  database.py  encrypt.py  graphql.py  join.py  json_dumps.py  log_area.py  registry.py  releaser.py  test_suite.py  uuid_generate.py
src/environment_provider/lib/kubernetes/: __init__.py  client.py  environment.py  provider.py  testrun.py
src/environment_provider/lib/kubernetes/schemas/: __init__.py  common.py  environment.py  environment_request.py  provider.py  testrun.py
src/environment_provider/logs/: __init__.py  checkin.py  checkout.py  exceptions.py  list.py  log_area.py  log_area_definition.json  log_area_provider.py
src/environment_provider/middleware/: __init__.py  json_translator.py  require_json.py
src/environment_provider/splitter/: __init__.py  split.py
src/environment_provider_api/: __init__.py  webserver.py
src/environment_provider_api/backend/: __init__.py  common.py  configure.py  environment.py  register.py  subsuite.py
src/environment_provider_api/middleware/: __init__.py  json_translator.py  require_json.py
src/execution_space_provider/: __init__.py  exceptions.py  execution_space.py  execution_space_provider.py  external_execution_space_provider.py
src/execution_space_provider/schemas/: external_schema.json
src/execution_space_provider/utilities/: __init__.py  checkin.py  checkout.py  external_provider.py  instructions.py  jsontas_provider.py  list.py
src/iut_provider/: __init__.py  exceptions.py  external_iut_provider.py  iut.py  iut_provider.py
src/iut_provider/utilities/: __init__.py  checkin.py  checkout.py  external_provider.py  jsontas_provider.py  list.py  prepare.py
src/log_area_provider/: __init__.py  exceptions.py  external_log_area_provider.py  log_area.py  log_area_provider.py
src/log_area_provider/schemas/: external_schema.json
src/log_area_provider/utilities/: __init__.py  checkin.py  checkout.py  external_provider.py  jsontas_provider.py  list.py
tests/: __init__.py  conftest.py  tercc.py  test_environment_provider.py  test_webserver.py  test_webserver_configure.py  test_webserver_environment.py  test_webserver_register.py
tests/backend/: __init__.py  test_common.py  test_configure.py  test_environment.py  test_register.py  test_sub_suite.py
tests/external_execution_space/: __init__.py  test_external_execution_space.py
tests/external_iut/: __init__.py  test_external_iut.py
tests/external_log_area/: __init__.py  test_external_log_area.py
tests/splitter/: test_splitter.py
