[build-system]
requires = ["setuptools>=72", "wheel", "setuptools_scm[toml]>=8"]

[project]
name = "etos_environment_provider"
dynamic = ["version"]
description = "Environment Provider for ETOS."
authors = [{name = "Tobias Persson", email = "tobias.persson@axis.com"}]
license = { text  = "Apache License, Version 2.0" }
readme = "README.rst"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License"
]
dependencies = [
    "cryptography>=42.0.4,<43.0.0",
    "jsontas~=1.3",
    "packageurl-python~=0.11",
    "etcd3gw~=2.3",
    "etos_lib==4.3.6",
    "opentelemetry-api~=1.21",
    "opentelemetry-exporter-otlp~=1.21",
    "opentelemetry-sdk~=1.21",
]

[project.urls]
Documentation = "https://etos.readthedocs.io/"
Homepage = "https://github.com/eiffel-community/etos-environment-provider"
Repository = "https://github.com/eiffel-community/etos-environment-provider"

[project.scripts]

[project.optional-dependencies]
testing = ["pytest", "pytest-cov"]

[tool.flake8]
exclude = [".tox", "build", "dist", ".eggs", "docs/conf.py"]

[tool.pytest.ini_options]
addopts = "--cov etos_lib --cov-report term-missing --verbose"
norecursedirs = ["dist", "build", ".tox"]
testpaths = ["tests"]

[tool.build_sphinx]
source_dir = "docs"
build_dir = "build/sphinx"

[tool.devpi.upload]
no-vcs = 1
formats = "bdist_wheel"

[tool.setuptools_scm]
version_scheme = "setup:version_scheme"
local_scheme = "setup:local_scheme"